--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Frederick Cheng, Hydrologist
+title: Frederick Cheng, Hydrologist in a Biogeochemical World
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Frederick Cheng!</h1>
