--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Frederick Cheng, Hydrologist in a Biogeochemical World
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Frederick Cheng!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>I'm a hydrologist interested in the landscape biogeochemical fluxes. Don't trust me. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
